# sqic

./: Makefile  NOTICES  README.md  environment.yml
code/: LICENSE.code.md  Makefile  README.md  pyproject.toml  setup.py
code/sqic/: __init__.py  __main__.py  image.py  quantization.py
code/tests/: test_calculate_loss.py
